--- a/pkgdown/extra.css
+++ b/pkgdown/extra.css
@@ -1,14 +1,27 @@
+:root {
+  --primary-color: #87D7E3;
+}
+
 .navbar {
-  background-color: #8EC5D0 !important;
+  background-color: var(--primary-color) !important;
+}
+
+
+#navbar > ul.navbar-nav > li.nav-item > a {
+  color: rgba(255, 255, 255, 0.55);
+}
+
+.navbar-dark .navbar-nav .active > .nav-link {
+  background-color: var(--primary-color) !important;
+  color: #fff !important;
+}
+
+.navbar-brand {
+  color: #fff !important;
 }
 
 #navbar > ul.navbar-nav > li.nav-item a:hover {
-  background-color: #8EC5D0 !important;
-}
-
-.navbar-dark .navbar-nav .active>.nav-link {
-  background-color: #8EC5D0 !important;
-  color: #fff;
+  background-color: var(--primary-color) !important;
 }
 
 .navbar-dark input[type="search"] {
@@ -21,15 +34,25 @@ nav .text-muted {
 }
 
 a {
-  color: #29647e;
+  color: var(--primary-color);
 }
 
-.app-preview {
-  margin: 1.5em 0.75em;
-  padding: 0.25em;
-  box-shadow:
-    0 3.9px 4.6px rgba(0, 0, 0, 0.08),
-    0 12.3px 8.4px rgba(0, 0, 0, 0.056),
-    0 18.8px 19.2px rgba(0, 0, 0, 0.037),
-    0 22px 40px rgba(0, 0, 0, 0.019);
+a:hover {
+  color: #2c2b2b;
+}
+
+button.btn.btn-primary.btn-copy-ex {
+  background-color: var(--primary-color);
+  border-color: var(--primary-color);
+}
+
+.home {
+  left: 0px;
+  position: absolute;
+  padding: 8px 30px;
+  color: rgba(255,255,255,0.55);
+}
+
+.home:hover {
+  color: rgba(255,255,255,0.9);
 }
